--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,4 @@ language: node_js
 node_js:
   - 12
   
-script:
- - "C:\Program Files (x86)\Google\Chrome\Application\chrome.exe" index.html
+script: pass
